<resources>
    <string name="app_name">Workout counter</string>
    <string name="purpose">Counting your super duper awesome reps</string>
    <string name="HMSets">Sets:</string>
    <string name="timeOrReps">Reps:</string>
    <string name="rest">Rest period:</string>
    <string name="rep">Rep timer:</string>
    <string name="start">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="take_picture">Start</string>
    <string name="count">count</string>
    <string name="_00">00</string>
    <string name="_colon">:</string>
    <string name="time">Time</string>
</resources>
