<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/purpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/purpose"
        android:textColor="@color/colorAccent1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/HMSets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/HMSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/HMSets"
        android:textColor="@color/colorAccent1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/SetsCounter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texture"
        app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
        android:id="@+id/SetsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/timeOrReps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HMSets">

        <Button
            android:id="@+id/SetMinus"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent1"
            android:text="@string/minus"
            android:textColor="@color/colorDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/sets"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/SetMinus"
            android:autofillHints="@string/start"
            android:gravity="center_horizontal"
            android:hint="@string/start"
            android:inputType="number"
            android:maxLength="3"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/start"
            android:textColor="@color/colorAccent1"
            android:textSize="20sp">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/SetPlus"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/sets"
            android:background="@color/colorAccent1"
            android:text="@string/plus"
            android:textColor="@color/colorDark"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/timeOrReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/timeOrReps"
        android:textColor="@color/colorAccent1"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SetsCounter" />

    <RelativeLayout
        android:id="@+id/Repscounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/texture"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeOrReps"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/RepMinus"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent1"
            android:text="@string/minus"
            android:textColor="@color/colorDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/reps"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/RepMinus"
            android:autofillHints="@string/start"
            android:gravity="center_horizontal"
            android:hint="@string/start"
            android:inputType="number"
            android:maxLength="3"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/start"
            android:textColor="@color/colorAccent1"
            android:textSize="20sp">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/RepPlus"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/reps"
            android:background="@color/colorAccent1"
            android:text="@string/plus"
            android:textColor="@color/colorDark"
            android:textSize="20sp" />

    </RelativeLayout>

    <CheckBox
        android:id="@+id/counterCheckBox"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@color/colorOffAccent"
        android:checked="true"
        android:text="@string/count"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/Repscounter"
        app:layout_constraintEnd_toStartOf="@+id/Repscounter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/timerCheckBox"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@color/colorOffAccent"
        android:text="@string/time"
        android:textColor="@color/colorDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/Repscounter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Repscounter"
        tools:ignore="RtlSymmetry" />

    <TextureView
        android:id="@+id/texture"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_above="@+id/btn_takepicture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/btn_takepicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/take_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        app:layout_constraintVertical_bias="0.789" />

    <RelativeLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Repscounter">

        <TextView
            android:id="@+id/minutes"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:maxLength="2"
            android:paddingTop="5dp"
            android:text="@string/_00"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/sep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/minutes"
            android:text="@string/_colon"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/seconds"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/sep"
            android:maxLength="2"
            android:paddingTop="5dp"
            android:text="@string/_00"
            android:textSize="25sp" />
    </RelativeLayout>

    <SeekBar
        android:id="@+id/minutesBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:max="60"
        android:min="0"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="@+id/timer"
        app:layout_constraintEnd_toStartOf="@+id/timer"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Repscounter"
        app:layout_constraintVertical_bias="0.75" />

    <SeekBar
        android:id="@+id/secondsBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:max="59"
        android:min="0"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="@+id/timer"
        app:layout_constraintStart_toEndOf="@+id/timer"
        app:layout_constraintTop_toBottomOf="@+id/Repscounter"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>